--- a/WebApp/views/login.handlebars
+++ b/WebApp/views/login.handlebars
@@ -1,8 +1,11 @@
+<div>
 <form action="/login" method="post">
 
-    <input type="text" name="username" id="user" placeholder="Username">
+    <input type="text" name="username" id="username" placeholder="Username">
     <input type="password" name="password" id="password" placeholder="Password">
 
     <button type="submit">Login</button>
 
 </form>
+{{message}}
+</div>
