--- a/DesktopApp/src/sample/MainWindow.fxml
+++ b/DesktopApp/src/sample/MainWindow.fxml
@@ -2,13 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: EC5832;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button fx:id="btnTests" layoutX="563.0" layoutY="515.0" mnemonicParsing="false" onAction="#clickTests" prefHeight="73.0" prefWidth="157.0" text="Tests" />
-      <Button layoutX="969.0" layoutY="515.0" mnemonicParsing="false" prefHeight="73.0" prefWidth="157.0" text="Learning" />
-      <Label layoutX="1276.0" layoutY="119.0" prefHeight="52.0" prefWidth="150.0" text="Johny Walker" />
-      <Button fx:id="btnLogout" layoutX="1276.0" layoutY="182.0" mnemonicParsing="false" onAction="#MenuLogout" prefHeight="28.0" prefWidth="96.0" text="Log Out" />
+      <Button fx:id="btnTests" layoutX="563.0" layoutY="515.0" mnemonicParsing="false" onAction="#clickTests" prefHeight="73.0" prefWidth="157.0" style="-fx-border-radius: 5; -fx-background-color: #ecebe9, rgba(0,0,0,0.05), linear-gradient(#dcca8a, #c7a740), linear-gradient(#f9f2d6 0%, #f4e5bc 20%, #e6c75d 80%, #e2c045 100%), linear-gradient(#f6ebbe, #e6c34d); -fx-background-insets: 0,9 9 8 9,9,10,11; -fx-background-radius: 50; -fx-padding: 15 30 15 30; -fx-font-size: 18; -fx-text-fill: #311c09; -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.1) , 2, 0.0 , 0 , 1);" text="Tests" />
+      <Button fx:id="btnLearning" layoutX="969.0" layoutY="515.0" mnemonicParsing="false" prefHeight="73.0" prefWidth="157.0" style="-fx-border-radius: 5; -fx-background-color: #ecebe9, rgba(0,0,0,0.05), linear-gradient(#dcca8a, #c7a740), linear-gradient(#f9f2d6 0%, #f4e5bc 20%, #e6c75d 80%, #e2c045 100%), linear-gradient(#f6ebbe, #e6c34d); -fx-background-insets: 0,9 9 8 9,9,10,11; -fx-background-radius: 50; -fx-padding: 15 30 15 30; -fx-font-size: 18; -fx-text-fill: #311c09; -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.1) , 2, 0.0 , 0 , 1);" text="Learning" />
+      <Label layoutX="1276.0" layoutY="119.0" prefHeight="52.0" prefWidth="150.0" style="-fx-background-color: #a6b5c9,linear-gradient(#303842 0%, #3e5577 20%, #375074 100%),linear-gradient(#768aa5 0%, #849cbb 5%, #5877a2 50%, #486a9a 51%, #4a6c9b 100%);-fx-background-insets: 0 0 -1 0,0,1;-fx-background-radius: 5,5,4;-fx-padding: 7 30 7 30;-fx-text-fill: #242d35;-fx-font-size: 12px;-fx-text-fill: white;" text="Johny Walker" />
+      <Button fx:id="btnLogout" layoutX="1276.0" layoutY="182.0" mnemonicParsing="false" onAction="#MenuLogout" prefHeight="28.0" prefWidth="96.0" style="-fx-background-color: linear-gradient(#f0ff35, #a9ff00), radial-gradient(center 50% -40%, radius 200%, #b8ee36 45%, #80c800 50%); -fx-background-radius: 6, 5; -fx-background-insets: 0, 1; -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 ); -fx-text-fill: #395306;" text="Log Out" />
+      <ImageView fx:id="logoGL" fitHeight="229.0" fitWidth="676.0" layoutX="512.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@LogoGL.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imageUsers" fitHeight="52.0" fitWidth="61.0" layoutX="1220.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@UserPicture.png" />
+         </image></ImageView>
    </children>
 </Pane>
