--- a/DesktopApp/src/sample/sample.fxml
+++ b/DesktopApp/src/sample/sample.fxml
@@ -7,22 +7,22 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="708.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="708.0" style="-fx-background-color: EC5832;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Button fx:id="btnLogin" layoutX="301.0" layoutY="477.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="35.0" prefWidth="114.0" text="Login" />
-      <PasswordField fx:id="passwordField" layoutX="261.0" layoutY="387.0" prefHeight="35.0" prefWidth="186.0" promptText="Type here ..." />
-      <Label layoutX="195.0" layoutY="78.0" text="Sovy Test">
+      <PasswordField fx:id="passwordField" layoutX="261.0" layoutY="387.0" prefHeight="35.0" prefWidth="186.0" promptText="Type here ..." style="-fx-background-color: white; -fx-border-color: black;" />
+      <Label layoutX="195.0" layoutY="78.0" text="Sovy Test" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="72.0" />
          </font>
       </Label>
-      <Label layoutX="321.0" layoutY="236.0" text="Login">
+      <Label layoutX="321.0" layoutY="236.0" text="Login" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="loginField" layoutX="261.0" layoutY="286.0" prefHeight="35.0" prefWidth="186.0" promptText="Type here ..." />
-      <Label layoutX="301.0" layoutY="340.0" text="Password">
+      <TextField fx:id="loginField" layoutX="261.0" layoutY="286.0" prefHeight="35.0" prefWidth="186.0" promptText="Type here ..." style="-fx-background-color: white; -fx-border-color: black;" />
+      <Label layoutX="301.0" layoutY="340.0" text="Password" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
