Layout of the webpage

--- a/WebApp/views/layouts/main.handlebars
+++ b/WebApp/views/layouts/main.handlebars
@@ -5,16 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    
+        <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.6/js/v4-shims.js"></script>
+    <link rel="stylesheet" type="text/css" href="/public/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="/registerStudent">Register as student</a>
-    <a href="/">Log in</a>
-    <a href="/logout">Log Out</a>
-    
+ <div class="sidebar col-md-2 navbar-fixed-top">
+      <div class="logo">
+        <img class="mimg" src="/public/img/Untitled-5.png" alt="">
+      </div><hr>
+      <div class="navigation">
+        <ul class=" navbar-nav ">
+          <li><i class="fas menuic fa-home"></i><a href="">Dashboard</a></li>
+          <li><i class="fas menuic fa-user-circle"></i><a href="">User Profile</a></li>
+          <li><i class="fas menuic fa-chart-bar"></i><a href="">Analitics</a></li>
+          <li><i class="fas menuic fa-bell"></i><a href="">Notification</a></li>
+          <li><i class="fas menuic fa-tasks"></i><a href="">Tests</a></li>
+        </ul>
+
+      </div>
+
+    </div>
+
+    <div class="content">
+      <div class="top-header col-md-10">
+        <div class="notifications">
+         <a id="title" href="">Dashboard</a>
+         <a href=""><i class="far headeric fa-comment"></i></a>
+         <a href=""><i class="fas headeric fa-book"></i></a>
+         <a href=""><i class="fas headeric fa-cloud"></i></a>
+         </div>
+         <div class="links">
+         <a href="/registerStudent">Register as student</a>
+         <a href="/logout">Log out</a>
+         <a href="/login">Log in</a>
+         </div>
+      </div>
+
+  <div class="container">
+      <div class="">
+
+        <div class="main col-md-3">Content</div>
+        <div class="main col-md-3">Content</div>
+
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+          <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
+      </div>
+      </div>
+
+
+    </div>
+
 {{#if error_msg}}
         <div class="alert alert-danger">{{error_msg}}</div>
       {{/if}}
