--- a/WebApp/views/login.handlebars
+++ b/WebApp/views/login.handlebars
@@ -1,4 +1,5 @@
-<div>
+<div class="container">
+
 <form action="/login" method="post">
 
     <input type="text" name="username" id="username" placeholder="Username">
