--- a/WebApp/views/registerStudent.handlebars
+++ b/WebApp/views/registerStudent.handlebars
@@ -1,16 +1,12 @@
 <div class="container">
-    <form class="form-horizontal" role="form" method="POST" action="/registerStudent">
+    <form class="form" role="form" method="POST" action="/registerStudent">
         <div class="row">
-            <div class="col-md-3"></div>
             <div class="col-md-6">
                 <h2>Register as Student</h2>
-                <hr>
+                
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 field-label-responsive">
-                <label for="firstName">First Name</label>
-            </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
@@ -30,9 +26,7 @@
         </div>
 
          <div class="row">
-            <div class="col-md-3 field-label-responsive">
-                <label for="lastName">Last Name</label>
-            </div>
+        
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
@@ -51,9 +45,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 field-label-responsive">
-                <label for="email">E-Mail Address</label>
-            </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
@@ -72,9 +63,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 field-label-responsive">
-                <label for="password">Password</label>
-            </div>
             <div class="col-md-6">
                 <div class="form-group has-danger">
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
@@ -93,9 +81,6 @@
             </div> --}}
         </div>
         <div class="row">
-            <div class="col-md-3 field-label-responsive">
-                <label for="password">Confirm Password</label>
-            </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
