--- a/WebApp/views/layouts/main.handlebars
+++ b/WebApp/views/layouts/main.handlebars
@@ -56,11 +56,7 @@
       </div>
 
   <div class="container">
-<<<<<<< HEAD
-    {{#if user}}
-=======
-    <!--
->>>>>>> 778516ac0383d868cfe2b09432ba3fd4ec36a164
+    
       <div class="">
         
         <div class="main col-md-3">Content</div>
@@ -85,18 +81,17 @@
           <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
           <div class="main col-md-3"><p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div container holding the input. This adds proper padding if you have more than one inputs (you will learn more about this in the Forms chapter).</p></div>
       </div>
-<<<<<<< HEAD
       
       </div>
-    {{/if}}
+    
 
-    </div>
+   
 
-{{#if error_msg}}
-=======
--->
+
+{{!-- {{#if error_msg}} --}}
+
+
       {{#if error_msg}}
->>>>>>> 778516ac0383d868cfe2b09432ba3fd4ec36a164
         <div class="alert alert-danger">{{error_msg}}</div>
       {{/if}}
       {{#if error}}
@@ -111,8 +106,6 @@
       {{{body}}} 
       </div>
  
-
-    </div>
 
   
 </body>
